# router

./: .gitmodules  CMakeLists.txt
cmake/: router_config.cmake
examples/: CMakeLists.txt  community.cpp  int_if_then.cpp  int_router.cpp
examples/rpg/: CMakeLists.txt  if_then.cpp  if_then_2.cpp  if_then_arguments.cpp  meta.cpp  meta_2.cpp  meta_2_implicit_conversion.cpp  meta_2_implicit_conversion_and_return.cpp  meta_2_implicit_conversion_and_return_and_explicit_argument.cpp  meta_2_implicit_conversion_and_return_and_explicit_argument_and_state.cpp  meta_2_implicit_conversion_and_runtime_name.cpp  virtual.cpp  virtual_arguments.cpp  virtual_arguments_state.cpp
examples/rpg/input/: multi_arguments.txt  multi_arguments_2.txt  single_argument.txt  single_argument_2.txt
examples/rpg/output/: multi_arguments.txt  multi_arguments_2.txt  multi_arguments_3.txt  multi_arguments_4.txt  single_argument.txt  single_argument_2.txt
include/router/: router.hpp
scripts/run/: examples.sh
scripts/run/rpg/: examples.sh
